# atomicbox

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: atomic_box.rs  atomic_box_base.rs  atomic_option_box.rs  lib.rs
tests/: compile_tests.rs
tests/compile-fail/: send_rc.rs
