[package]
name = "atomicbox"
description = "Safe atomic pointers to boxed data."
version = "0.2.0"
authors = ["Jason Orendorff <jason.orendorff@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jorendorff/atomicbox"

[dependencies]

[badges]
travis-ci = { repository = "jorendorff/atomicbox" }
